--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
         <title>Appointments</title>
     </head>
         <body>
-            <noscript>You need to enable JavaScript to run this app.</noscript>
-            <div id="root">
             <header>
                 <h1> Appointment Scheduler MVP</h1>
             </header>
@@ -30,12 +28,10 @@
                         <input type="time" placeholder="-_-_" required />
                         <input type="submit" value="Add Appointment" />
                     </div>
+                    <hr>
                 </form>
-
-                <hr>
-
                 <h2> Appointments </h2>
             </section>
-            </div>
+            <footer>Copyright &copy; MVP 2021.</footer>
         </body>
 </html>
