--- a/index2.html
+++ b/index2.html
@@ -23,16 +23,17 @@
 
             <div class="form-control">
                 <input type="text" placeholder="contact name" required />
-                <input type="text" placeholder="contact email" required />
-                <input type="text" placeholder="contact phone" required />
+                <input type="email" placeholder="contact email" required />
+                <input type="tel" placeholder="contact phone" required />
                 <input type="submit" value="Add Contact">
             </div>
+            <hr>
         </form>
-
-        <hr>
 
         <h2> Contacts </h2>
     </section>
+
+    <footer>Copyright &copy; MVP 2021.</footer>
 </body>
 
 </html>
